# AI-Candidate-Intelligence-Engine

./: Dockerfile  README.md  calibrate.py  precompute.py  pyproject.toml  rank.py  requirements-dense.txt  requirements.txt  submission_metadata.yaml
artifacts/: submission_full.csv
src/redrob_ranker/: __init__.py  behavioral.py  embeddings.py  features.py  honeypot.py  io_utils.py  ranker.py  reasoning.py  role_dna.py  scoring.py  semantic.py  taxonomy.py
tests/: test_pipeline.py  test_role_dna.py
