[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "redrob-ranker"
version = "1.0.0"
description = "Intelligent candidate discovery & ranking for the Redrob hackathon"
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.24,<3",
    "scipy>=1.10",
    "scikit-learn>=1.3",
    "PyYAML>=6.0",
]

[project.optional-dependencies]
dense = ["sentence-transformers>=2.2", "torch>=2.0"]
dev = ["pytest>=7.0"]

[tool.setuptools.packages.find]
where = ["src"]
